[package]
name = "rust-sccache-docker-layer-caching"
version = "0.1.0"
edition = "2021"

[build]
rustc-wrapper = "sccache"

[dependencies]
config = "0.14.0"
anyhow = "1.0.79"
rand = "0.8.5"

tokio = { version =  "1.37.0", features = ["full"] }
actix = "0.13.3"
axum = "0.7.5"
rage = "0.10.0"

log = "0.4"
pretty_env_logger = "0.5.0"

async-openai = "0.20.0"

serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"

sqlx = { version = "0.7.3", features = ["macros", "sqlite", "runtime-tokio-native-tls"] }
sqlx-macros = "0.7.3"

teloxide = "0.12.2"

chrono = { version = "0.4", features = ["serde"] }

reqwest = "0.12.3"

openssl = "0.10.64"

thiserror = "1.0.58"

surreal = "0.4.1"

hyper = "1.2.0"

clap = "4.5.4"

regex = "1.10.4"

base64 = "0.22.0"

tracing = "0.1.40"

toml = "0.8.12"

uuid = "1.8.0"

async-trait = "0.1.80"

hex = "0.4.3"

syn = "2.0.59"

cfg-if = "1.0.0"

hashbrown = "0.14.3"

once_cell = "1.19.0"

diesel = "2.1.5"

rocket = "0.5.0"

futures = "0.3.30"

async-std = "1.12.0"

